--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           <a href="mailto:farisahmadghaisan321@email.com">📧</a>
           <a href="https://linkedin.com" target="_blank">🔗</a>
           <a href="https://github.com/Faris-AG" target="_blank">💻</a>
-          <a href="https://instagram.com" target="_blank">📸</a>
+          <a href="https://www.instagram.com/riss.indomie?igsh=bTJrZ3V4bjc4OTk4" target="_blank">📸</a>
         </div>
       </div>
     </section>
@@ -459,3 +459,4 @@
     </script>
   </body>
 </html>
+
