--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       rel="stylesheet"
     />
     <style>
+      html {
+        scroll-behavior: smooth;
+      }
       :root {
         --bg-light: #ffffff;
         --text-light: #1a1a1a;
@@ -470,3 +473,4 @@
     </script>
   </body>
 </html>
+
