--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <header data-aos="fade-right" class="header">
+    <header data-aos="fade-left" class="header">
       <div class="container navbar">
         <a href="#" class="logo">[X-PPLG 3]</a>
         <nav class="nav-links">
@@ -473,4 +473,5 @@
     </script>
   </body>
 </html>
+
 
