--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
       rel="stylesheet"
     />
     <style>
+      body,
+      html {
+        overflow-x: hidden;
+      }
+
       html {
         scroll-behavior: smooth;
       }
+
       :root {
         --bg-light: #ffffff;
         --text-light: #1a1a1a;
@@ -324,7 +330,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <header data-aos="fade-left" class="header">
+    <header data-aos="fade-right" class="header">
       <div class="container navbar">
         <a href="#" class="logo">[X-PPLG 3]</a>
         <nav class="nav-links">
@@ -473,5 +479,3 @@
     </script>
   </body>
 </html>
-
-
